fix arab preword display on ios and made fontsize and paddinf of finished word larger

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 html,
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   overflow: hidden;
+  font-family: 'Tajawal', sans-serif;
   height: 100%;
   width: 100%;
   position: fixed;
